# LLM-From-Scratch

./: README.md  pyproject.toml
Ch02_Working_With_Text_Data/: 01_Understanding_Word_Embeddings.ipynb  02_Tokenizing_Text.ipynb  03_Tokens_into_Token_IDs.ipynb  04_Adding_Special_Tokens.ipynb  05_Byte_Pair_Encoding.ipynb  06_Sliding_Window.ipynb  07_Creating_Token_Embeddings.ipynb  08_Encoding_Word_Positions.ipynb
Ch03_Coding_Attention_Mechanism/: 01_Problem_With_Long_Sentences.ipynb  02_Capturing_Dependencies_With_Attention.ipynb  03_Self_Attention_Without_Weights.ipynb  4.1_Self_Attention_With_Weights.ipynb  4.2_Self_Attention_Class.ipynb  5.1_Causal_Attention.ipynb  5.2_Causal_Attention_Class.ipynb  6.1_Multi_Head_Attention.ipynb  6.2_Multi_Head_Attention_Class.ipynb  6.3_Batched_Matrix_Multiplication.ipynb
Ch04_Implementing_A_GPT_Model/: 01_Coding_An_LLM_Architecture.ipynb  03_FFN_With_GeLU.ipynb  04_Adding_Shortcut_Connections.ipynb  05_Transformer_Block.ipynb  07_Generating_Text.ipynb  2.1_Layer_Normalization.ipynb  2.2_Layer_Normalization_Class.ipynb  6.1_Coding_The_GPT_Model.ipynb  6.2_Coding_The_GPT_Model.ipynb  GPT_CONFIG_124M.ipynb
Ch05_Pretraining_On_Unlabeled_Data/: 02_Training_An_LLM.ipynb  03_Decoding_Strategies.ipynb  04_Loading_And_Saving_Weights.ipynb  05_Loading_Pretrained_Weights.ipynb  1.1_Text_Generation.ipynb  1.2_Text_Evaluation.ipynb  1.3_Training_And_Validation_Losses.ipynb  Ch02_Loading_Data.ipynb  Ch04_GPT.ipynb  GPT_CONFIG_124M_Modified.ipynb
