[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "A step-by-step Guide: Implement a GPT-like LLM From Scratch using PyTorch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3.0",
    "jupyterlab>=4.0",
    "tiktoken>=0.5.1",
    "matplotlib>=3.7.1",
    "tensorflow>=2.18.0",
    "tqdm>=4.66.1",
    "numpy>=1.26,<2.1",
    "pandas>=2.2.1",
    "psutil>=5.9.5"
]

[tool.setuptools.packages]
find = {}

[tool.uv.sources]
llm-from-scratch = { workspace = true }

[dependency-groups]
dev = [
    "llm-from-scratch",
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
exclude = [".venv"]
# Ignored rules (W504 removed)
ignore = [
    "C406", "E226", "E402", "E702", "E703",
    "E722", "E731", "E741"
]
